--- a/src/index.html
+++ b/src/index.html
@@ -725,6 +725,7 @@
                         }
                         elem.innerHTML = str1;
                         //spanningFunc(".animeText3");
+                        //GITHUB!!
                     }
                 }
 
