--- a/src/index.html
+++ b/src/index.html
@@ -726,6 +726,7 @@
                         elem.innerHTML = str1;
                         //spanningFunc(".animeText3");
                         //GITHUB!!
+                        //Yeah!
                     }
                 }
 
